Add some examples

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 
 /Lekcja4/Lekcja4/InterfacesAndStrategy/obj/Debug
 /Lekcja4/Lekcja4/.vs/Lekcja4/v16
+/Lekcja4/Lekcja4/LoopsConditionalsAndIterations/obj/Debug
+/Lekcja4/Prezentacja/.~lock.Prezentacja.odp#
