--- a/Lekcja4/Lekcja4/InterfacesAndStrategy/InterfacesAndStrategy.csproj
+++ b/Lekcja4/Lekcja4/InterfacesAndStrategy/InterfacesAndStrategy.csproj
@@ -54,5 +54,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Writers\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
