--- a/Lekcja4/Lekcja4/LoopsConditionalsAndIterations/LoopsConditionalsAndIterations.csproj
+++ b/Lekcja4/Lekcja4/LoopsConditionalsAndIterations/LoopsConditionalsAndIterations.csproj
@@ -45,9 +45,11 @@
   <ItemGroup>
     <Compile Include="EnumeratorUseCase.cs" />
     <Compile Include="Foreach.cs" />
+    <Compile Include="IfStatement.cs" />
     <Compile Include="Loops.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SwitchCase.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
