Add updates of code and presentation

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 /Lekcja4/Lekcja4/.vs/Lekcja4/v16
 /Lekcja4/Lekcja4/LoopsConditionalsAndIterations/obj/Debug
 /Lekcja4/Prezentacja/.~lock.Prezentacja.odp#
+/Lekcja4/Lekcja4/Exceptions/obj/Debug
+/Lekcja4/Lekcja4/Exceptions/bin/Debug
+/Lekcja4/Lekcja4/Inheritance/obj/Debug
+/Lekcja4/Lekcja4/LoopsConditionalsAndIterations/bin/Debug
