--- a/Lekcja4/Lekcja4/Inheritance/Inheritance.csproj
+++ b/Lekcja4/Lekcja4/Inheritance/Inheritance.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0E7A272F-9B79-4AFB-B4E8-2AD348FFA4A7}</ProjectGuid>
+    <ProjectGuid>{5B985475-B991-4288-935F-6A998519978B}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>InterfacesAndStrategy</RootNamespace>
-    <AssemblyName>InterfacesAndStrategy</AssemblyName>
+    <RootNamespace>Inheritance</RootNamespace>
+    <AssemblyName>Inheritance</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,20 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controllers\ProcessController.cs" />
-    <Compile Include="Interfaces\IOutputWriter.cs" />
+    <Compile Include="CustomList.cs" />
+    <Compile Include="MyClass.cs" />
+    <Compile Include="MyClass2.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\ConsoleService.cs" />
-    <Compile Include="Services\DialogService.cs" />
-    <Compile Include="Services\FileService.cs" />
-    <Compile Include="Services\WindowService.cs" />
-    <Compile Include="Writers\ConsoleOutputWriter.cs" />
-    <Compile Include="Writers\FileOutputWriter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
