--- a/Lekcja4/Lekcja4/InterfacesAndStrategy/InterfacesAndStrategy.csproj
+++ b/Lekcja4/Lekcja4/InterfacesAndStrategy/InterfacesAndStrategy.csproj
@@ -47,10 +47,12 @@
     <Compile Include="Interfaces\IOutputWriter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\PrintService.cs" />
     <Compile Include="Services\ConsoleService.cs" />
     <Compile Include="Services\DialogService.cs" />
     <Compile Include="Services\FileService.cs" />
     <Compile Include="Services\WindowService.cs" />
+    <Compile Include="Triggers\Run.cs" />
     <Compile Include="Writers\ConsoleOutputWriter.cs" />
     <Compile Include="Writers\FileOutputWriter.cs" />
   </ItemGroup>
